@@ -5,6 +5,7 @@ setClass("AllModelClass",
                         df='numeric', 
                         p='numeric', 
                         AIC='numeric', 
+                        AICc='numeric',
                         F='matrix', 
                         h2='numeric', 
                         tabdata='matrix', 
@@ -14,6 +15,7 @@ setClass("AllModelClass",
                         converge='numeric', 
                         itemloc = 'numeric',                        
                         BIC='numeric', 
+                        SABIC='numeric',
                         RMSEA='numeric',                         
                         null.mod = 'S4', 
                         TLI = 'numeric',                          
