@@ -1,3 +1,5 @@
+* added AICc and sample size adjusted BIC (SABIC) information statistics
+
 * new mixedmirt() function for estimating IRT models with person level covariates. Currently only
   supports fixed effect predictors, but random effect predictors are being developed
 
